--- a/test/fixtures/topics.yml
+++ b/test/fixtures/topics.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: topics
+#
+#  id          :integer          not null, primary key
+#  user_id     :integer
+#  description :string
+#  image       :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
